# chessboard-history

./: README.md  lint.sh  pyproject.toml
src/chessboard_history/: chessboard_history.py  main.py
tests/: test_main.py
