[tool.poetry]
name = "chessboard-history"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "chessboard_history"}]

[tool.poetry.dependencies]
python = "^3.11"
chess = "^1.9.4"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.1"
flake8 = "^6.0.0"
bandit = "^1.7.5"
safety = "^2.3.5"

[tool.black]
line-length=120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
