[tool.poetry]
name = "chessboard_history"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src/chessboard_history"}]

[tool.poetry.dependencies]
python = "^3.11"
chess = "^1.9.4"
numpy = "^1.25.1"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.1"
flake8 = "^6.0.0"
bandit = "^1.7.5"
safety = "^2.3.5"
coverage = "^7.2.7"
pytest = "^7.4.0"

[tool.black]
line-length=120

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["src/chessboard_history", "tests"]

[tool.coverage.report]
show_missing = true

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
